// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture returns the correct cells with a project: cell count 1`] = `0`;

exports[`From within the empty-project fixture returns the correct cells without a project: cell count 1`] = `0`;

exports[`From within the example-todo-main fixture returns the correct cells with a project: /web/src/components/NumTodosCell/NumTodosCell.js 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/NumTodosCell/NumTodosCell.js",
  "gqlQuery": "
  query NumTodosCell_GetCount {
    todosCount
  }
",
  "gqlQueryName": "NumTodosCell_GetCount",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "NumTodosCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells with a project: /web/src/components/NumTodosTwoCell/NumTodosTwoCell.js 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/NumTodosTwoCell/NumTodosTwoCell.js",
  "gqlQuery": "
  query NumTodosCell_GetCount {
    todosCount
  }
",
  "gqlQueryName": "NumTodosCell_GetCount",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "NumTodosTwoCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells with a project: /web/src/components/TableCell/TableCell.js 1`] = `
RedwoodCell {
  "errors": [
    "No "Success" export found but one is required",
    "No "QUERY" export found but one is required",
  ],
  "filepath": "/web/src/components/TableCell/TableCell.js",
  "gqlQuery": undefined,
  "gqlQueryName": undefined,
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": false,
  "hasQueryExport": false,
  "hasSuccessExport": false,
  "isValid": false,
  "name": "TableCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells with a project: /web/src/components/TodoListCell/TodoListCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/TodoListCell/TodoListCell.tsx",
  "gqlQuery": "
  query TodoListCell_GetTodos {
    todos {
      id
      body
      status
    }
  }
",
  "gqlQueryName": "TodoListCell_GetTodos",
  "hasAfterQueryExport": true,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "TodoListCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells with a project: cell count 1`] = `4`;

exports[`From within the example-todo-main fixture returns the correct cells without a project: /web/src/components/NumTodosCell/NumTodosCell.js 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/NumTodosCell/NumTodosCell.js",
  "gqlQuery": "
  query NumTodosCell_GetCount {
    todosCount
  }
",
  "gqlQueryName": "NumTodosCell_GetCount",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "NumTodosCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells without a project: /web/src/components/NumTodosTwoCell/NumTodosTwoCell.js 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/NumTodosTwoCell/NumTodosTwoCell.js",
  "gqlQuery": "
  query NumTodosCell_GetCount {
    todosCount
  }
",
  "gqlQueryName": "NumTodosCell_GetCount",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "NumTodosTwoCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells without a project: /web/src/components/TableCell/TableCell.js 1`] = `
RedwoodCell {
  "errors": [
    "No "Success" export found but one is required",
    "No "QUERY" export found but one is required",
  ],
  "filepath": "/web/src/components/TableCell/TableCell.js",
  "gqlQuery": undefined,
  "gqlQueryName": undefined,
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": false,
  "hasQueryExport": false,
  "hasSuccessExport": false,
  "isValid": false,
  "name": "TableCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells without a project: /web/src/components/TodoListCell/TodoListCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/TodoListCell/TodoListCell.tsx",
  "gqlQuery": "
  query TodoListCell_GetTodos {
    todos {
      id
      body
      status
    }
  }
",
  "gqlQueryName": "TodoListCell_GetTodos",
  "hasAfterQueryExport": true,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "TodoListCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main fixture returns the correct cells without a project: cell count 1`] = `4`;

exports[`From within the example-todo-main-with-errors fixture returns the correct cells with a project: /web/src/components/TableCell/TableCell.js 1`] = `
RedwoodCell {
  "errors": [
    "No "Success" export found but one is required",
    "No "QUERY" export found but one is required",
  ],
  "filepath": "/web/src/components/TableCell/TableCell.js",
  "gqlQuery": undefined,
  "gqlQueryName": undefined,
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": false,
  "hasQueryExport": false,
  "hasSuccessExport": false,
  "isValid": false,
  "name": "TableCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct cells with a project: /web/src/components/TodoListCell/TodoListCell.js 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/TodoListCell/TodoListCell.js",
  "gqlQuery": "
  {
    todos {
      id
      body
      status
    }
  }
",
  "gqlQueryName": undefined,
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "TodoListCell",
  "warnings": [
    "Could not determine the GraphQL query name",
  ],
}
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct cells with a project: cell count 1`] = `2`;

exports[`From within the example-todo-main-with-errors fixture returns the correct cells without a project: /web/src/components/TableCell/TableCell.js 1`] = `
RedwoodCell {
  "errors": [
    "No "Success" export found but one is required",
    "No "QUERY" export found but one is required",
  ],
  "filepath": "/web/src/components/TableCell/TableCell.js",
  "gqlQuery": undefined,
  "gqlQueryName": undefined,
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": false,
  "hasQueryExport": false,
  "hasSuccessExport": false,
  "isValid": false,
  "name": "TableCell",
  "warnings": [],
}
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct cells without a project: /web/src/components/TodoListCell/TodoListCell.js 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/TodoListCell/TodoListCell.js",
  "gqlQuery": "
  {
    todos {
      id
      body
      status
    }
  }
",
  "gqlQueryName": undefined,
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": false,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "TodoListCell",
  "warnings": [
    "Could not determine the GraphQL query name",
  ],
}
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct cells without a project: cell count 1`] = `2`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/AuthorCell/AuthorCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/AuthorCell/AuthorCell.tsx",
  "gqlQuery": "
  query FindAuthorQuery($id: Int!) {
    author: user(id: $id) {
      email
      fullName
    }
  }
",
  "gqlQueryName": "FindAuthorQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "AuthorCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/BlogPostCell/BlogPostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/BlogPostCell/BlogPostCell.tsx",
  "gqlQuery": "
  query FindBlogPostQuery($id: Int!) {
    blogPost: post(id: $id) {
      id
      title
      body
      author {
        email
        fullName
      }
      createdAt
    }
  }
",
  "gqlQueryName": "FindBlogPostQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "BlogPostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/BlogPostsCell/BlogPostsCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/BlogPostsCell/BlogPostsCell.tsx",
  "gqlQuery": "
  query BlogPostsQuery {
    blogPosts: posts {
      id
      title
      body
      author {
        email
        fullName
      }
      createdAt
    }
  }
",
  "gqlQueryName": "BlogPostsQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "BlogPostsCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/Contact/ContactCell/ContactCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Contact/ContactCell/ContactCell.tsx",
  "gqlQuery": "
  query FindContactById($id: Int!) {
    contact: contact(id: $id) {
      id
      name
      email
      message
      createdAt
    }
  }
",
  "gqlQueryName": "FindContactById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "ContactCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/Contact/ContactsCell/ContactsCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Contact/ContactsCell/ContactsCell.tsx",
  "gqlQuery": "
  query FindContacts {
    contacts {
      id
      name
      email
      message
      createdAt
    }
  }
",
  "gqlQueryName": "FindContacts",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "ContactsCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/Contact/EditContactCell/EditContactCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Contact/EditContactCell/EditContactCell.tsx",
  "gqlQuery": "
  query EditContactById($id: Int!) {
    contact: contact(id: $id) {
      id
      name
      email
      message
      createdAt
    }
  }
",
  "gqlQueryName": "EditContactById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "EditContactCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/Post/EditPostCell/EditPostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Post/EditPostCell/EditPostCell.tsx",
  "gqlQuery": "
  query EditPostById($id: Int!) {
    post: post(id: $id) {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "EditPostById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "EditPostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/Post/PostCell/PostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Post/PostCell/PostCell.tsx",
  "gqlQuery": "
  query FindPostById($id: Int!) {
    post: post(id: $id) {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "FindPostById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "PostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/Post/PostsCell/PostsCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Post/PostsCell/PostsCell.tsx",
  "gqlQuery": "
  query FindPosts {
    posts {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "FindPosts",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "PostsCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: /web/src/components/WaterfallBlogPostCell/WaterfallBlogPostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/WaterfallBlogPostCell/WaterfallBlogPostCell.tsx",
  "gqlQuery": "
  query FindWaterfallBlogPostQuery($id: Int!) {
    waterfallBlogPost: post(id: $id) {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "FindWaterfallBlogPostQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "WaterfallBlogPostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells with a project: cell count 1`] = `10`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/AuthorCell/AuthorCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/AuthorCell/AuthorCell.tsx",
  "gqlQuery": "
  query FindAuthorQuery($id: Int!) {
    author: user(id: $id) {
      email
      fullName
    }
  }
",
  "gqlQueryName": "FindAuthorQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "AuthorCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/BlogPostCell/BlogPostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/BlogPostCell/BlogPostCell.tsx",
  "gqlQuery": "
  query FindBlogPostQuery($id: Int!) {
    blogPost: post(id: $id) {
      id
      title
      body
      author {
        email
        fullName
      }
      createdAt
    }
  }
",
  "gqlQueryName": "FindBlogPostQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "BlogPostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/BlogPostsCell/BlogPostsCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/BlogPostsCell/BlogPostsCell.tsx",
  "gqlQuery": "
  query BlogPostsQuery {
    blogPosts: posts {
      id
      title
      body
      author {
        email
        fullName
      }
      createdAt
    }
  }
",
  "gqlQueryName": "BlogPostsQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "BlogPostsCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/Contact/ContactCell/ContactCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Contact/ContactCell/ContactCell.tsx",
  "gqlQuery": "
  query FindContactById($id: Int!) {
    contact: contact(id: $id) {
      id
      name
      email
      message
      createdAt
    }
  }
",
  "gqlQueryName": "FindContactById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "ContactCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/Contact/ContactsCell/ContactsCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Contact/ContactsCell/ContactsCell.tsx",
  "gqlQuery": "
  query FindContacts {
    contacts {
      id
      name
      email
      message
      createdAt
    }
  }
",
  "gqlQueryName": "FindContacts",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "ContactsCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/Contact/EditContactCell/EditContactCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Contact/EditContactCell/EditContactCell.tsx",
  "gqlQuery": "
  query EditContactById($id: Int!) {
    contact: contact(id: $id) {
      id
      name
      email
      message
      createdAt
    }
  }
",
  "gqlQueryName": "EditContactById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "EditContactCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/Post/EditPostCell/EditPostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Post/EditPostCell/EditPostCell.tsx",
  "gqlQuery": "
  query EditPostById($id: Int!) {
    post: post(id: $id) {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "EditPostById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": false,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "EditPostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/Post/PostCell/PostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Post/PostCell/PostCell.tsx",
  "gqlQuery": "
  query FindPostById($id: Int!) {
    post: post(id: $id) {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "FindPostById",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "PostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/Post/PostsCell/PostsCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/Post/PostsCell/PostsCell.tsx",
  "gqlQuery": "
  query FindPosts {
    posts {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "FindPosts",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "PostsCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: /web/src/components/WaterfallBlogPostCell/WaterfallBlogPostCell.tsx 1`] = `
RedwoodCell {
  "errors": [],
  "filepath": "/web/src/components/WaterfallBlogPostCell/WaterfallBlogPostCell.tsx",
  "gqlQuery": "
  query FindWaterfallBlogPostQuery($id: Int!) {
    waterfallBlogPost: post(id: $id) {
      id
      title
      body
      authorId
      createdAt
    }
  }
",
  "gqlQueryName": "FindWaterfallBlogPostQuery",
  "hasAfterQueryExport": false,
  "hasBeforeQueryExport": false,
  "hasEmptyExport": true,
  "hasFailureExport": true,
  "hasIsEmptyExport": false,
  "hasLoadingExport": true,
  "hasQueryExport": true,
  "hasSuccessExport": true,
  "isValid": true,
  "name": "WaterfallBlogPostCell",
  "warnings": [],
}
`;

exports[`From within the test-project fixture returns the correct cells without a project: cell count 1`] = `10`;
